Bug 161230 - Pie-of-pie and bar-of-pie chart data labels are misaligned
Summary: Pie-of-pie and bar-of-pie chart data labels are misaligned
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
Depends on:
Blocks: Chart-Labels Pie-and-Donut
  Show dependency treegraph
 
Reported: 2024-05-23 09:13 UTC by Mihai Vasiliu
Modified: 2024-10-15 21:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
example file (54.55 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-05-23 09:13 UTC, Mihai Vasiliu
Details
slide 1 as shown in MS Office (65.13 KB, image/png)
2024-05-23 09:13 UTC, Mihai Vasiliu
Details
slide 2 as shown in MS Office (80.78 KB, image/png)
2024-05-23 09:14 UTC, Mihai Vasiliu
Details
sample ODS created in LO (21.06 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-06-07 11:50 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Vasiliu 2024-05-23 09:13:28 UTC
Description:
Opening a pptx file with a pie-of-pie chart results in the data labels being all over the place, not alligned with their data.

Steps to Reproduce:
1. Open attached pptx file.
2. Look at the two slides.

Actual Results:
The data labels for the slices are misalligned and all over the place.

Expected Results:
The data labels should have been positioned according to the image attached (from MS Office)


Reproducible: Always


User Profile Reset: No

Additional Info:
Note that opening the file in LO 24.4 shows the labels placed correctly on their corresponding data slice, though the pie-of-pie chart display is not supported.

Version: 24.8.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: a17e39caaf73108bee692d6f64a44c62f4066f1d
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded
Comment 1 Mihai Vasiliu 2024-05-23 09:13:44 UTC
Created attachment 194296 [details]
example file
Comment 2 Mihai Vasiliu 2024-05-23 09:13:51 UTC
Created attachment 194297 [details]
slide 1 as shown in MS Office
Comment 3 Mihai Vasiliu 2024-05-23 09:14:00 UTC
Created attachment 194298 [details]
slide 2 as shown in MS Office
Comment 4 stragu 2024-06-07 11:50:10 UTC
Reproduced in:

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1f15d097cace14ca6e44e7652f460aa3fa7bd150
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Even reproducible by adding labels to a chart create from scratch in LO:

1. Open Calc
2. Insert "1" in cell A1, autofill A1:A5
3. With A1:A5 selected, insert a pie-of-pie or bar-of-pie chart
4. Insert > Data labels > Value as number > OK

Result: all labels are misplaced, and there's an extra "NaN" that maybe is supposed to be the total of the subchart? (But I guess the NaN belongs to bug 161228.)
Comment 5 stragu 2024-06-07 11:50:30 UTC
Created attachment 194583 [details]
sample ODS created in LO
Comment 6 Commit Notification 2024-08-17 06:20:33 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0092c5627f3dc2db33846e3b81ce19780372529

tdf#161230 - Pie-of-pie and bar-of-pie chart data labels are misaligned

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Mihai Vasiliu 2024-08-19 08:37:20 UTC
Issue not seen anymore in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cd4498d32867af26e95de84836b724b4f85ba1b0
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded