tdf#161230 - Pie-of-pie and bar-of-pie chart data labels are misaligned

Implementing label support for of-pie charts. This involves using the existing
pie label code with an added horizontal shift, and adding special (simple)
handling for the bars in bar-of-pie. This also fixes tdf#161228

Change-Id: Ifc7c1f28548caf216aba5c7dc411d05a0c9d8726
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169566
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins